overflow bug fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,20 +253,22 @@ font-family: Lora, sans-serif;
 /* navbar ending */
 /* header start*/
 header {
+  height: 100vh;
+  /* width: 100vw; */
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
-.container {
+.myContainer {
   margin: 0 10%;
 }
-header {
+/* header {
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: row;
-}
+} */
 #heading {
   flex: 1;
   display: flex;
@@ -286,13 +288,15 @@ header {
   padding-bottom: 2rem;
   padding-top: 7rem;
 }
-#pic {
-  flex: 1;
-  margin-top: 100px;
-  margin-left: 100px;
+/* #pic { */
+/* margin-top: 100px;
+  margin-left: 100px; */
+/* width: 50%; */
+/* } */
+.header-pic {
   width: 50%;
+  flex: 1;
 }
-
 /* about starting */
 .about-section {
   height: 100vh;
@@ -363,27 +367,26 @@ header {
 }
 
 /* course section */
-#course{
+#course {
   background-color: orange;
-  color :white;
+  color: white;
   margin-top: 4rem;
 }
 
-#course h2{
+#course h2 {
   font-size: 30px;
   font-weight: 900;
   color: white;
   text-decoration: underline;
- 
 }
-#course h3{
-  color:white;
+#course h3 {
+  color: white;
 }
-#course img{
+#course img {
   border: 35px solid white;
   border-radius: 33px;
 }
-#cont{
+#cont {
   margin-left: 50px;
   border: 1px solid white;
 }
